[gd_scene load_steps=35 format=2]

[ext_resource path="res://inventory_system/settings_node.tscn" type="PackedScene" id=1]
[ext_resource path="res://inventory_system/resources/sprites/inner_panel.png" type="Texture" id=2]
[ext_resource path="res://inventory_system/resources/sprites/title.png" type="Texture" id=3]
[ext_resource path="res://resources/soundtrack/AudioLoopPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/soundtrack/menu/Track 12.wav" type="AudioStream" id=5]
[ext_resource path="res://resources/Textures/background/bg_01.png" type="Texture" id=6]
[ext_resource path="res://resources/font/OpenSans-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://inventory_system/scripts/ui/ui_container.gd" type="Script" id=8]
[ext_resource path="res://inventory_system/resources/sprites/main panel.png" type="Texture" id=9]
[ext_resource path="res://inventory_system/scenes/ui/inventory_player.tscn" type="PackedScene" id=10]
[ext_resource path="res://resources/font/SERIO___.TTF" type="DynamicFontData" id=11]
[ext_resource path="res://resources/Themes/ui_theme1.tres" type="Theme" id=12]
[ext_resource path="res://resources/font/Tiktok.otf" type="DynamicFontData" id=13]
[ext_resource path="res://inventory_system/data/resources/settings_data.tres" type="Resource" id=14]
[ext_resource path="res://scenes/main_shop/shop_option.tscn" type="PackedScene" id=15]
[ext_resource path="res://inventory_system/scripts/ui/settings.gd" type="Script" id=16]
[ext_resource path="res://inventory_system/resources/font/Arcadepix Plus.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://inventory_system/resources/sprites/x_pressed.png" type="Texture" id=18]
[ext_resource path="res://inventory_system/resources/sprites/x_disabled.png" type="Texture" id=19]
[ext_resource path="res://inventory_system/resources/sprites/x_normal.png" type="Texture" id=20]
[ext_resource path="res://inventory_system/resources/sprites/x_hover.png" type="Texture" id=21]
[ext_resource path="res://resources/Sprites/coin.png" type="Texture" id=22]

[sub_resource type="GDScript" id=13]
script/source = "extends ParallaxBackground

export (float) var scrolling_speed = 250.0

func _process(delta):
	scroll_offset.x -= scrolling_speed * delta

"

[sub_resource type="GDScript" id=32]
script/source = "extends ColorRect

export( NodePath ) onready var lbl_coin = get_node( lbl_coin ) as Label

export( Resource ) var settings_data

func _ready():
	settings_data.connect( \"changed\", self, \"_on_data_changed\" )
	lbl_coin.text = str( settings_data.gold_coins )

func _on_data_changed():
	lbl_coin.text = str( settings_data.gold_coins )
"

[sub_resource type="DynamicFont" id=16]
size = 80
extra_spacing_bottom = 5
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=20]
size = 250
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=21]
size = 80
font_data = ExtResource( 13 )

[sub_resource type="GDScript" id=6]
script/source = "extends Control

export ( NodePath ) onready var recipe_list = get_node( recipe_list ) as VBoxContainer

func _ready():
	SignalManager.connect( \"crafting_opened\", self, \"_on_crafting_opened\" )
	SignalManager.connect( \"crafting_out_of_range\", self, \"_on_crafting_out_of_range\" )

# Display the list of recipes.
func display( recipes ):
	for c in recipe_list.get_children():
		recipe_list.remove_child( c )
		c.queue_free()
	
	for recipe_id in recipes:
		var recipe_node = ResourceManager.get_instance( \"crafting_option\" )
		recipe_list.add_child( recipe_node )
		recipe_node.set_info( recipe_id, recipes[ recipe_id ].price, recipes[ recipe_id ].produce )
	
	show()
	rect_size = Vector2( 440, 0 )

# When closed, set the shop opened to false.
func close():
	.close()
	InventoryManager.is_shop_open = false

# When opened, display the ui, and if it's a shop, allow selling.
func _on_crafting_opened( list_id ):
	display( ResourceManager.get_recipes( list_id ) )
	if list_id == \"shop\":
		InventoryManager.is_shop_open = true

# When out of range, close the window.
func _on_crafting_out_of_range():
	close()
"

[sub_resource type="StyleBoxFlat" id=33]
bg_color = Color( 0, 0, 0, 0.588235 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 9

[sub_resource type="StyleBoxFlat" id=34]
bg_color = Color( 0, 0, 0, 1 )
border_width_right = 25
border_color = Color( 1, 0.847059, 0, 1 )

[sub_resource type="Theme" id=30]
VScrollBar/styles/grabber = SubResource( 33 )
VScrollBar/styles/grabber_highlight = SubResource( 33 )
VScrollBar/styles/grabber_pressed = SubResource( 33 )
VScrollBar/styles/scroll = SubResource( 34 )

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 212.231, 212.181 )
margin_left = 22.0
margin_right = 22.0
margin_top = 22.0
margin_bottom = 22.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="DynamicFont" id=18]
size = 40
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=19]
size = 24
font_data = ExtResource( 17 )

[node name="shop" type="CanvasLayer"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = SubResource( 13 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Bg01" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 960, 540 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="coins" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -934.0
margin_top = -698.0
margin_right = 94.0
margin_bottom = -415.0
rect_rotation = 9.32357
mouse_filter = 1
color = Color( 1, 0.847059, 0, 1 )
script = SubResource( 32 )
lbl_coin = NodePath("container/player_coins")
settings_data = ExtResource( 14 )

[node name="container" type="Control" parent="coins"]
margin_left = 616.743
margin_top = 170.332
margin_right = 949.743
margin_bottom = 307.332
rect_rotation = -9.04409

[node name="TextureRect" type="TextureRect" parent="coins/container"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -1.75586
margin_top = -18.491
margin_right = 38.2441
margin_bottom = 21.509
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 22 )

[node name="player_coins" type="Label" parent="coins/container"]
unique_name_in_owner = true
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -241.998
margin_top = 0.117065
margin_right = -30.9982
margin_bottom = 0.117065
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.423529, 0.247059, 0.121569, 1 )
custom_fonts/font = SubResource( 16 )
text = "0"
valign = 1

[node name="ColorRect" type="ColorRect" parent="coins"]
show_behind_parent = true
margin_left = -209.0
margin_top = 79.0
margin_right = 1054.0
margin_bottom = 380.0
rect_rotation = -3.1034
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label3" type="Label" parent="coins"]
margin_left = 59.1779
margin_top = 70.3419
margin_right = 630.178
margin_bottom = 320.342
rect_rotation = -0.0506091
custom_colors/font_color = Color( 1, 1, 1, 0.45098 )
custom_fonts/font = SubResource( 20 )
text = "SHOP"

[node name="Label4" type="Label" parent="coins"]
margin_left = 683.359
margin_top = 88.4578
margin_right = 903.359
margin_bottom = 168.458
rect_rotation = -9.506
custom_colors/font_color = Color( 0, 0, 0, 0.647059 )
custom_fonts/font = SubResource( 21 )
text = "COINS"

[node name="ui_container" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
settings = NodePath("settings_node/settings")
player_inventory = NodePath("inventory_player")

[node name="inventory_player" parent="ui_container" instance=ExtResource( 10 )]
margin_left = -926.0
margin_top = 226.0
margin_right = -404.0
margin_bottom = 395.0

[node name="windows" type="Control" parent="ui_container"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="crafting_list" type="TextureRect" parent="ui_container/windows"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1023.0
margin_top = 151.0
margin_right = -327.0
margin_bottom = -310.0
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 12 )
script = SubResource( 6 )
recipe_list = NodePath("TabContainer/Materials/ScrollContainer/recipe_list")

[node name="title" type="Control" parent="ui_container/windows/crafting_list"]
margin_left = 20.0
margin_top = 20.0
margin_right = 676.0
margin_bottom = 599.0
mouse_filter = 1

[node name="TabContainer" type="TabContainer" parent="ui_container/windows/crafting_list"]
margin_left = 10.0
margin_top = -87.0
margin_right = 681.0
margin_bottom = 620.0
theme = ExtResource( 12 )

[node name="Materials" type="Tabs" parent="ui_container/windows/crafting_list/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 116.0
margin_right = -20.0
margin_bottom = -20.0

[node name="ScrollContainer" type="ScrollContainer" parent="ui_container/windows/crafting_list/TabContainer/Materials"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.00006
rect_min_size = Vector2( 0, 538 )
size_flags_horizontal = 3
theme = SubResource( 30 )
scroll_horizontal_enabled = false

[node name="recipe_list" type="VBoxContainer" parent="ui_container/windows/crafting_list/TabContainer/Materials/ScrollContainer"]
margin_right = 595.0
margin_bottom = 1020.0
rect_min_size = Vector2( 595, 0 )
mouse_filter = 2
size_flags_vertical = 3

[node name="shop_option" parent="ui_container/windows/crafting_list/TabContainer/Materials/ScrollContainer/recipe_list" instance=ExtResource( 15 )]
margin_right = 595.0
margin_bottom = 124.0
size_flags_vertical = 3
panel_title = "RJ45 Cable"
price = 50
item_id = "rj45"
quantity = 1

[node name="shop_option2" parent="ui_container/windows/crafting_list/TabContainer/Materials/ScrollContainer/recipe_list" instance=ExtResource( 15 )]
margin_top = 128.0
margin_right = 595.0
margin_bottom = 252.0
size_flags_vertical = 3
panel_title = "adsda"
price = 100
item_id = "gold_coin"
quantity = 1

[node name="shop_option3" parent="ui_container/windows/crafting_list/TabContainer/Materials/ScrollContainer/recipe_list" instance=ExtResource( 15 )]
margin_top = 256.0
margin_right = 595.0
margin_bottom = 380.0
size_flags_vertical = 3
panel_title = "adsda"
price = 100
item_id = "gold_coin"
quantity = 1

[node name="shop_option4" parent="ui_container/windows/crafting_list/TabContainer/Materials/ScrollContainer/recipe_list" instance=ExtResource( 15 )]
margin_top = 384.0
margin_right = 595.0
margin_bottom = 508.0
size_flags_vertical = 3
panel_title = "adsda"
price = 100
item_id = "gold_coin"
quantity = 1

[node name="shop_option5" parent="ui_container/windows/crafting_list/TabContainer/Materials/ScrollContainer/recipe_list" instance=ExtResource( 15 )]
margin_top = 512.0
margin_right = 595.0
margin_bottom = 636.0
size_flags_vertical = 3
panel_title = "adsda"
price = 100
item_id = "gold_coin"
quantity = 1

[node name="shop_option6" parent="ui_container/windows/crafting_list/TabContainer/Materials/ScrollContainer/recipe_list" instance=ExtResource( 15 )]
margin_top = 640.0
margin_right = 595.0
margin_bottom = 764.0
size_flags_vertical = 3
panel_title = "adsda"
price = 100
item_id = "gold_coin"
quantity = 1

[node name="shop_option7" parent="ui_container/windows/crafting_list/TabContainer/Materials/ScrollContainer/recipe_list" instance=ExtResource( 15 )]
margin_top = 768.0
margin_right = 595.0
margin_bottom = 892.0
size_flags_vertical = 3
panel_title = "adsda"
price = 100
item_id = "gold_coin"
quantity = 1

[node name="shop_option8" parent="ui_container/windows/crafting_list/TabContainer/Materials/ScrollContainer/recipe_list" instance=ExtResource( 15 )]
margin_top = 896.0
margin_right = 595.0
margin_bottom = 1020.0
size_flags_vertical = 3
panel_title = "adsda"
price = 100
item_id = "gold_coin"
quantity = 1

[node name="Equipments" type="Tabs" parent="ui_container/windows/crafting_list/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 116.0
margin_right = -20.0
margin_bottom = -20.0

[node name="ColorRect" type="ColorRect" parent="ui_container/windows/crafting_list"]
show_behind_parent = true
margin_left = 206.667
margin_top = -390.667
margin_right = 905.667
margin_bottom = 25.3333
rect_rotation = 26.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="VScrollBar" type="VScrollBar" parent="ui_container/windows"]
visible = false
margin_left = 1052.0
margin_top = 112.0
margin_right = 1064.0
margin_bottom = 124.0

[node name="Control" type="ColorRect" parent="ui_container/windows"]
visible = false
margin_left = 197.0
margin_top = 53.0
margin_right = 893.0
margin_bottom = 637.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="settings_node" parent="ui_container" instance=ExtResource( 1 )]
visible = false
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="AudioLoopPlayer" parent="." instance=ExtResource( 4 )]
stream = ExtResource( 5 )

[node name="settings2" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -732.0
margin_top = -272.0
margin_right = -350.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 191, 156 )
mouse_filter = 1
custom_styles/panel = SubResource( 17 )
script = ExtResource( 16 )
__meta__ = {
"_edit_group_": true
}
scale_slider = NodePath("setting list/scale/HSlider")
fullscreen_check = NodePath("setting list/fullscreen/CheckBox")
lbl_min = NodePath("setting list/scale/min")
lbl_max = NodePath("setting list/scale/max")
lbl_current = NodePath("setting list/scale/current")
settings_data = ExtResource( 14 )

[node name="title" type="Control" parent="settings2"]
margin_left = 22.0
margin_top = 22.0
margin_right = 360.0
margin_bottom = 285.0
mouse_filter = 1

[node name="close" type="TextureButton" parent="settings2/title"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 16.0
margin_top = -23.0
margin_right = 25.0
margin_bottom = -14.0
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 21 )
texture_disabled = ExtResource( 19 )

[node name="Label" type="Label" parent="settings2/title"]
anchor_right = 1.0
margin_top = -79.0
margin_bottom = -37.0
grow_vertical = 0
mouse_filter = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 18 )
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_group_": true
}

[node name="title" type="NinePatchRect" parent="settings2/title/Label"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -18.0
margin_right = 6.0
margin_bottom = 17.0
mouse_filter = 1
texture = ExtResource( 3 )
patch_margin_left = 8
patch_margin_top = 6
patch_margin_right = 8
patch_margin_bottom = 2

[node name="setting list" type="VBoxContainer" parent="settings2"]
margin_left = 22.0
margin_top = 22.0
margin_right = 360.0
margin_bottom = 285.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scale" type="NinePatchRect" parent="settings2/setting list"]
margin_right = 338.0
margin_bottom = 62.0
size_flags_vertical = 3
texture = ExtResource( 2 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="current" type="Label" parent="settings2/setting list/scale"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -59.0
margin_top = 4.0
margin_right = 59.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.423529, 0.247059, 0.121569, 1 )
custom_fonts/font = SubResource( 19 )
text = "- Scale -"
align = 1
valign = 1

[node name="min" type="Label" parent="settings2/setting list/scale"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_top = 4.0
margin_right = -110.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.423529, 0.247059, 0.121569, 1 )
custom_fonts/font = SubResource( 19 )
text = "Min: #"
valign = 1

[node name="max" type="Label" parent="settings2/setting list/scale"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 107.0
margin_top = 4.0
margin_right = 162.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.423529, 0.247059, 0.121569, 1 )
custom_fonts/font = SubResource( 19 )
text = "Max: #"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="settings2/setting list/scale"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 7.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = 22.0
min_value = 1.0
max_value = 5.0
step = 0.5
value = 4.0

[node name="fullscreen" type="NinePatchRect" parent="settings2/setting list"]
margin_top = 66.0
margin_right = 338.0
margin_bottom = 129.0
size_flags_vertical = 3
texture = ExtResource( 2 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Label" type="Label" parent="settings2/setting list/fullscreen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -59.0
margin_top = 4.0
margin_right = 59.0
margin_bottom = 10.0
custom_colors/font_color = Color( 0.423529, 0.247059, 0.121569, 1 )
custom_fonts/font = SubResource( 19 )
text = "- Fullscreen -"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="settings2/setting list/fullscreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -8.14029
margin_right = 12.0
margin_bottom = 15.8597

[node name="Others" type="NinePatchRect" parent="settings2/setting list/fullscreen"]
margin_right = 126.0

[node name="others" type="NinePatchRect" parent="settings2/setting list"]
margin_top = 133.0
margin_right = 338.0
margin_bottom = 196.0
size_flags_vertical = 3
texture = ExtResource( 2 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="holder" type="NinePatchRect" parent="settings2/setting list/others"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.0
margin_top = -10.0
margin_right = 47.0
margin_bottom = 10.0

[node name="save" type="Button" parent="settings2/setting list/others/holder"]
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -8.5
margin_right = 41.0
margin_bottom = 8.5
text = "Save"

[node name="load" type="Button" parent="settings2/setting list/others/holder"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -43.0
margin_top = -9.5
margin_right = 26.0
margin_bottom = 8.5
text = "Load"

[node name="quit" type="NinePatchRect" parent="settings2/setting list"]
margin_top = 200.0
margin_right = 338.0
margin_bottom = 263.0
rect_min_size = Vector2( 0, 30 )
size_flags_vertical = 3
texture = ExtResource( 2 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="settings2/setting list/quit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 117.0
margin_top = 11.0
margin_right = -117.0
margin_bottom = -11.0
text = "Quit"

[node name="settings" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
color = Color( 0, 0, 0, 0.588235 )

[connection signal="pressed" from="settings2/title/close" to="settings2" method="_on_close_pressed"]
[connection signal="gui_input" from="settings2/setting list/scale/HSlider" to="settings2" method="_on_scale_slider_gui_input"]
[connection signal="toggled" from="settings2/setting list/fullscreen/CheckBox" to="settings2" method="_on_CheckBox_toggled"]
[connection signal="pressed" from="settings2/setting list/others/holder/save" to="settings2" method="_on_save_pressed"]
[connection signal="pressed" from="settings2/setting list/others/holder/load" to="settings2" method="_on_load_pressed"]
[connection signal="pressed" from="settings2/setting list/quit/quit" to="settings2" method="_on_quit_pressed"]
